# reverse-engineering-outlaws

./: README.md  premake5.lua
cmake/: CMakeLists.txt
source/: lab_pack.cpp  lab_unpack.cpp  main.cpp  ol_test.cpp
source/ol/: filesys_utils.cpp  filesys_utils.hpp  lab_archive_reader.cpp  lab_archive_reader.hpp  lab_archive_writer.cpp  lab_archive_writer.hpp  lab_common.cpp  lab_common.hpp
